# union-sums

./: .travis.yml  README.md  union-sums.cabal
src/: UnionSums.hs
test/: Spec.hs  UnionSumsSpec.hs
