name:                union-sums
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Concert/union-sums#readme
license:             LGPL-3
license-file:        LICENSE
author:              Paul Weaver
maintainer:          development@concertdaw.co.uk
copyright:           2017 Concert Audio Technologies
category:            Template Haskell
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     UnionSums
  build-depends:       base >= 4.7 && < 5
                     , errors
                     , template-haskell
                     , text
  default-language:    Haskell2010

test-suite union-sums-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , union-sums
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Concert/union-sums
